--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,5 +1,5 @@
 /**
- * CSS that iss not categorized yet. Should be empty at some point .
+ * CSS that iss not categorized yet. 
  */
 
 
@@ -145,4 +145,34 @@
   position: absolute !important;
   white-space: nowrap;
   width: 1px;
+}
+
+.loading-centered {
+  margin: auto;
+  padding-top: 5em;
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 64px;
+  height: 64px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 46px;
+  height: 46px;
+  margin: 1px;
+  border-radius: 50%;
+  border: 5px solid #d4d3da;
+  border-color: #d4d3da #e31f1f00 #d4d3da transparent;
+  animation: lds-dual-ring 2.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
