--- a/public/css/general.css
+++ b/public/css/general.css
@@ -69,6 +69,13 @@
   transition: transform 1s;
 }
 
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
 /** BURGER MENU (unused atm) */
 
 /** nothing really to do with burger menu */
