--- a/public/css/threads.css
+++ b/public/css/threads.css
@@ -3,148 +3,67 @@
  * 
  */
 
- .thread-forum-title {
-   margin-left: 1.4em;
-   text-align: left;
- }
- 
- .thread-forum-title a:link {
-   text-decoration: underline;
-   color: rgb(40, 40, 100);
- }
-
- a:visited .thread-forum-title,
- a:active .thread-forum-title 
- {
-   text-decoration: underline;
-   color: rgb(35, 35, 62);
- }
- 
+/** POST conntainer */
 .thread-post-container {
   margin-left: calc(var(--post-level) * 3em);
   margin-right: 2.3em;
   font-size: 0.9em;
 }
 
-.thread-post-content {
-  white-space: pre-line;
-}
+/** 
 
-.thread-post .edit-icon {
-  display: none;
-  grid-row: 2;
-  grid-column: 3;
-  justify-self: flex-end;
-  margin: 0.2em;
-  font-size: 1.4em;
+POST
 
-}
+2 Header Rows
+1 Main content Row 
+1 Footer Row 
 
-.bad-content-link {
-  display: block;
-  padding: 0.8em 4em;
-  margin: 0.4em 0.1em;
-  border: 1px dashed #c3a2a27a;
-  color: #8f6b6b;
-  background: #f6f1f1;
-  border-radius: 0.4em;
-  justify-self: center;
-  cursor: pointer;
-}
-.bad-content-link:hover {
-  color: #5f5e66;
-}
-
-/*.thread-post-is-root.thread-post-container {
-  margin-left: 0em;
-}*/
-
-.post-reply {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-top: 1em;
-  margin-bottom: 4em;
-}
-
-.post-reply textarea {
-  overflow: auto;
-  /*resize: none;*/
-  border: 2px solid rgba(175, 181, 185, 0.3);
-  border-radius: 0.4em;
-  width: 90%;
-  outline: none;
-  padding: 0.5em;
-  padding-top: 1em;
-  min-height: 8em;
-}
-
-.post-reply a {
-  margin: 0.5em 0em;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border: 2px solid var(--color-border);
-  background: rgba(228, 230, 242, 0.57);
-  color: #4d4d4d;
-  border-radius: 0.2em;
-  padding: 0.45em 0.95em;
-  width: auto;
-}
-
-.post-reply a:hover {
-  box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.24);
-  background: rgba(228, 230, 242, 0.87);
-}
-.post-reply a i {
-  margin-left: 0.4em;
-  font-size: 1.25em;
-}
-
-.thread-post .post-reply {
-  grid-column: 1 / 5;
-  grid-row: 6 / 5;
-  border: 1px dashed rgba(0, 0, 0, 0.02);
-  z-index: 100;
-  overflow: visible;
-}
+1 Main Content Column 
+3-4 Right hand side Colums for header/footer buttons.  
+ 
+**/
 
 .thread-post {
   /* Layout */
   display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto auto 1fr auto;
+  grid-template-columns: 1fr auto auto auto auto;
   text-align: left;
-  border: 1px solid var(--color-border);
-  border-radius: 0.37em;
+  border: 1px solid #e0dfdf;
+  border-radius: 0.47em;
   overflow: hidden;
   margin-top: 0.6em;
   transition: height 1s;
-}
+ }
 
-.thread-post .thread-post-title {
-  grid-row: 1 / 2;
-  grid-column: 1 / 4;
-  margin-left: 0.8em;
-  color: rgb(83, 77, 77);
-  z-index: 40;
-}
 
-.thread-post .thread-post-title h3 {
-  padding: 0em; 
-}
 
+
+/** GRID ITEMS **/
+
+/** HEADER BACKGROUND */
 .thread-post-info {
-  grid-row: 1 / 2;
-  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+  grid-column: 1 / 19;
   background: linear-gradient(
     to left,
     rgba(228, 203, 228, 0.25) 0%,
     rgba(246, 249, 249, 0.55) 100%
   );
   box-shadow: inset 0 1px 3px -1px rgba(0, 0, 0, 0.24);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.13);
+
+  /* Note... z-index of 0 or more will mean 
+     the heade is actually affecting the color 
+     the header items (since its defined before
+     them in the DOM tree. and is on-top of them)
+  */
+  z-index: 0;
+  margin-top: -5px;
+  z-index: 0;
+ 
 }
+
+/** OVERRIDE HEADER BACKGROUND FOR ROOT */
 .thread-post-is-root .thread-post-info {
   background: linear-gradient(
     to left,
@@ -152,25 +71,99 @@
     rgba(141, 179, 179, 0.55) 100%
   );
   box-shadow: inset 0 1px 3px -1px rgba(0, 0, 0, 0.24);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.13);
 }
 
-.thread-post-content {
+
+.thread-post-title {
+  /* First two Rows of Header */
+  /* First (main) Column */
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  margin-left: 0.8em;
+  color: rgb(83, 77, 77);
+  z-index: 40;
+  text-align: left;
+}
+
+ 
+/** POST TIME. ALWAYS TOP RIGHT */
+.thread-post-time {
+  grid-row: 1 / 2;
+  grid-column: 6 / 8;
+  justify-self: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: right;
+  /* padding: 0.4em; */
+}
+
+/** FROM USERNAME / TEXT */
+.thread-post-from {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  justify-self: flex-start;
+  align-self: center;
+  padding: 0.3em;
+  margin-left: 0.2em;
+}
+
+.thread-post-from::after {
+  content: " replies";
+}
+
+/** OVERRIDE FROM FOR ROOT */
+.thread-post-is-root .thread-post-from {
   grid-row: 2 / 3;
-  grid-column: 2 / 4;
+  grid-column: 6 / 9;
+  justify-self: flex-end;
+  padding-right: 0.50em;
+  min-width: 0;
+}
+
+.thread-post-is-root .thread-post-from::after {
+  content: ""
+}
+
+
+
+/** MAIN CONTENT **/
+.thread-post-content {
+  grid-row: 3 / 4;
+  grid-column: 1 / 8;
   padding: 0.6em 0;
   margin: 0em 1em;
   min-height: 2.4em;
 }
+.thread-post-content {
+  white-space: pre-line;
+}
 
+
+
+.thread-post-edit-icon {
+  grid-row: 1 / 2;
+  grid-column: 8 / 9;
+  justify-self: flex-end;
+  margin: 0.2em;
+  font-size: 1.4em;
+}
+
+
+
+/** FOOTER TOP BORDER  */
 .thread-post-footer {
-  grid-row: 3 / 4;
-  grid-column: 1 / 4;
+  grid-row: 4 / 5;
+  grid-column: 1 / 9;
   margin: 0em 1em;
+  /*min-height: 2.5em;*/
   border-top: 2px solid rgba(0, 0, 0, 0.15);
 }
 
+/** REPLY BUTTON **/
 .thread-post-reply-button {
+  grid-row: 4 / 5;
+  grid-column: 4 / 5;
   display: flex;
   align-items: center;
   background: rgba(0, 0, 0, 0);
@@ -178,7 +171,14 @@
   border: 1px solid rgba(100, 100, 100, 0);
   transition: transform 0.2s, border 0.2s;
   padding: 0.38em;
+  min-width: 0;
   border-radius: 0.4em;
+  color: rgb(170, 170, 170);
+  margin: 0.45em 0em;
+}
+
+.is-votes-disabled .thread-post-reply-button  {
+  grid-column: 7 / 8; 
 }
 
 .thread-post-reply-button > * {
@@ -194,6 +194,7 @@
   border: 1px solid rgb(185, 192, 226);
 }
 
+/** REPLY BUTTON OVERRIDES FOR ROOT */
 .thread-post-is-root .thread-post-reply-button {
    color: rgba(46, 46, 46, 0.82);
    padding: 0.4em 1em;
@@ -207,12 +208,14 @@
 }
 
 
+/** VOTE BOX, contains both vote icons in a flexbox */
 .thread-post-vote {
   display: flex;
-  grid-row: 3 / 4;
-  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+  grid-column: 7 / 9;
   margin: 0.45em 1em;
-  /* justify-self: flex-end; */
+  padding: 0.12em;
+  justify-self: flex-end;
   justify-content: flex-end;
   align-items: center;
   color: rgb(170, 170, 170);
@@ -256,39 +259,8 @@
   display:none;
 }
 
-.thread-post-from {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-  justify-self: flex-start;
-  align-self: center;
-  padding: 0.4em;
-  margin-left: 0.2em;
-}
-
-.thread-post-from::after {
-  content: " replies";
-}
 
 
-.thread-post-is-root .thread-post-from {
-  grid-row: 1 / 2;
-  grid-column: 2;
-  justify-self: flex-end;
-}
-
-.thread-post-time {
-  grid-row: 1 / 2;
-  grid-column: 3 / 4;
-  justify-self: flex-end;
-  display: grid;
-  align-items: center;
-  margin: 0em 0.6em;
-  padding: 0.4em;
-}
-
-.thread-post-is-root .thread-post-from::after {
-  content: var(--post-time);
-} 
 
 .thread-post .root-post h4 {
   padding: 1em;
@@ -297,4 +269,67 @@
 }
 .thread-post p {
   padding: 0.2em 1em;
+}
+
+
+
+/** POST-REPLY BOX */
+
+.post-reply {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 1em;
+  margin-bottom: 4em;
+}
+
+.post-reply textarea {
+  overflow: auto;
+  /*resize: none;*/
+  border: 2px solid rgba(175, 181, 185, 0.3);
+  border-radius: 0.4em;
+  width: 90%;
+  outline: none;
+  padding: 0.5em;
+  padding-top: 1em;
+  min-height: 8em;
+}
+
+.post-reply a {
+  margin: 0.5em 0em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: 2px solid var(--color-border);
+  background: rgba(228, 230, 242, 0.57);
+  color: #4d4d4d;
+  border-radius: 0.2em;
+  padding: 0.45em 0.95em;
+  width: auto;
+}
+
+.post-reply a:hover {
+  box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.24);
+  background: rgba(228, 230, 242, 0.87);
+}
+.post-reply a i {
+  margin-left: 0.4em;
+  font-size: 1.25em;
+}
+
+/** BAD CONTENT DIV - REPLACES ENTIRE POST **/
+.bad-content-link {
+  display: block;
+  padding: 0.8em 4em;
+  margin: 0.4em 0.1em;
+  border: 1px dashed #c3a2a2;
+  color: #8f6b6b;
+  background: #f6f1f1;
+  border-radius: 0.4em;
+  justify-self: center;
+  cursor: pointer;
+}
+
+.bad-content-link:hover {
+  color: #5f5e66;
 }
