--- a/public/css/threads.css
+++ b/public/css/threads.css
@@ -140,13 +140,32 @@ POST
 }
 
 
-
 .thread-post-edit-icon {
   grid-row: 1 / 2;
   grid-column: 8 / 9;
   justify-self: flex-end;
   margin: 0.2em;
   font-size: 1.4em;
+}
+
+.thread-post-pending-icon {
+  grid-row: 1 / 2;
+  grid-column: 1 / 1;
+  align-self: center;
+  justify-self: end;
+  /* Kinda distracting tbh */
+  animation:spin 8s linear infinite;
+  color: #f5b097ab;
+  opacity: 0.0;
+  margin-right: 1em;
+  z-index: 50;
+}
+.is-pending-tx .thread-post-pending-icon {
+  opacity: 1.0;
+}
+
+@keyframes spin { 
+  100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
 }
 
 
