--- a/public/css/v-tooltip.css
+++ b/public/css/v-tooltip.css
@@ -6,10 +6,10 @@
 }
 
 .tooltip .tooltip-inner {
-  background: #333;
-  color: #eee;
-  border-radius: 2px;
-  padding: 5px 10px 4px;
+  background: #424242;
+  color: #f2f2f2;
+  border-radius: 0.4em;
+  padding: 0.3em 0.5em;
 }
 
 .tooltip .tooltip-arrow {
