--- a/public/css/threads.css
+++ b/public/css/threads.css
@@ -14,7 +14,7 @@
 
 POST
 
-2 Header Rows
+3 Header Rows
 1 Main content Row 
 1 Footer Row 
 
@@ -26,7 +26,7 @@ POST
 .thread-post {
   /* Layout */
   display: grid;
-  grid-template-rows: auto auto 1fr auto;
+  grid-template-rows: auto auto auto 1fr auto;
   grid-template-columns: 1fr auto auto auto auto;
   text-align: left;
   border: 1px solid #e0dfdf;
@@ -41,7 +41,7 @@ POST
 
 /** HEADER BACKGROUND */
 .thread-post-info {
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
   grid-column: 1 / 19;
   background: linear-gradient(
     to left,
@@ -74,7 +74,7 @@ POST
 .thread-post-title {
   /* First two Rows of Header */
   /* First (main) Column */
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
   grid-column: 1 / 2;
   margin-left: 0.8em;
   color: rgb(83, 77, 77);
@@ -139,7 +139,7 @@ POST
 
 /** OVERRIDE FROM FOR ROOT */
 .thread-post-is-root .thread-post-from {
-  grid-row: 2 / 3;
+  grid-row: 3 / 4;
   grid-column: 6 / 9;
   justify-self: flex-end;
   padding-right: 0.50em;
@@ -153,7 +153,7 @@ POST
 
 /** MAIN CONTENT **/
 .thread-post-content {
-  grid-row: 3 / 4;
+  grid-row: 4 / 5;
   grid-column: 1 / 9;
   padding-top: 1.2em;
   margin: 0em 1em;
@@ -203,10 +203,39 @@ POST
   100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
 }
 
+.thread-post-time-with-edits {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.thread-post-edits-dropdown {
+  font-size: 0.8em;
+  color: #444;
+  border: 1px sold #6f6f6f;
+  border-radius: 0.2em;
+}
+.thread-post-edits-dropdown a {
+  display: inline-block;
+  padding-bottom: 0.64em;
+  cursor: pointer;
+}
+.thread-post-edits-dropdown a:hover {
+  color: #111;
+  text-decoration: underline;
+}
+.thread-post-edits-dropdown-popover {
+  background: #edf3db;
+  margin: 0em;
+  padding: .15em 0.7em;
+  padding-top: 0.7em;
+  border-radius: 0.2em;
+  border: 1px solid #e4dede;
+}
 
 /** FOOTER TOP BORDER  */
 .thread-post-footer {
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
   grid-column: 1 / 9;
   margin: 0em 1em;
   /*min-height: 2.5em;*/
@@ -215,7 +244,7 @@ POST
 
 /** REPLY BUTTON **/
 .thread-post-reply-button {
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
   grid-column: 4 / 8;
   display: flex;
   align-items: center;
@@ -233,7 +262,7 @@ POST
 
 .edit-post-button-bar {
   grid-column: 1 / 9;
-  grid-row: 4;
+  grid-row: 5;
   display: flex;
   justify-content: flex-end;
   margin: 0.15em 0.8em;
@@ -320,7 +349,7 @@ POST
 /** VOTE BOX, contains both vote icons in a flexbox */
 .thread-post-vote {
   display: flex;
-  grid-row: 4 / 5;
+  grid-row: 5 / 6;
   grid-column: 8 / 9;
   margin: 0.45em 1em;
   padding: 0.17em;
