--- a/public/css/threads.css
+++ b/public/css/threads.css
@@ -155,13 +155,14 @@ POST
 .thread-post-content {
   grid-row: 4 / 5;
   grid-column: 1 / 9;
-  padding-top: 1.2em;
+  padding: 0.8em 0em;
+  padding-top: 0.9em;
   margin: 0em 1em;
-  min-height: 2.4em;
+  min-height: 1em;
 }
 
 .thread-post-content {
-  white-space: pre-line;
+  white-space: pre;
 }
 
 .thread-post-content-textarea {
@@ -172,7 +173,6 @@ POST
   border: 1px dashed rgba(0,0,0,0.3);
   border-radius: 0.3em;
 }
-
 
 .thread-post-edit-icon {
   /*display: none;*/
@@ -216,15 +216,18 @@ POST
   border: 1px sold #6f6f6f;
   border-radius: 0.2em;
 }
+
 .thread-post-edits-dropdown a {
   display: inline-block;
   padding-bottom: 0.64em;
   cursor: pointer;
 }
+
 .thread-post-edits-dropdown a:hover {
   color: #111;
   text-decoration: underline;
 }
+
 .thread-post-edits-dropdown-popover {
   background: #edf3db;
   margin: 0em;
@@ -239,7 +242,6 @@ POST
   grid-row: 5 / 6;
   grid-column: 1 / 9;
   margin: 0em 1em;
-  /*min-height: 2.5em;*/
   border-top: 2px solid rgba(0, 0, 0, 0.15);
 }
 
@@ -253,12 +255,12 @@ POST
   font-size: 0.9em;
   border: 1px solid rgba(100, 100, 100, 0);
   transition: transform 0.2s, border 0.2s;
-  padding: 0.38em;
   min-width: 0;
   border-radius: 0.4em;
   color: rgb(170, 170, 170);
-  margin: 0.45em 0em;
-  padding: 0em 0.3em;
+  margin: 0.19em 0em;
+  padding: 0.1em .3em;
+  
 }
 
 .edit-post-button-bar {
@@ -314,7 +316,6 @@ POST
   background: rgba(243, 178, 178, 0.09);
 }
 
-
 /*
 .is-votes-disabled .thread-post-reply-button  {
   grid-column: 5 / 5;
@@ -352,7 +353,7 @@ POST
   display: flex;
   grid-row: 5 / 6;
   grid-column: 8 / 9;
-  margin: 0.45em 1em;
+  margin: 0.05em 1em;
   padding: 0.17em;
   justify-content: space-around;
   align-items: center;
@@ -388,8 +389,6 @@ POST
   transform: scale3d(1, 1, 1);
 }
 
-
-
 .thread-post-vote .ri-thumb-down-line:hover {
   color: rgb(100, 100, 100);
   border: 1px solid rgb(210, 162, 120);
@@ -399,8 +398,6 @@ POST
   color: unset;
   border: 1px solid rgba(0,0,0,0);
 }
-
-
 
 .button-icon {
   cursor: pointer;
