--- a/public/css/remixicon.css
+++ b/public/css/remixicon.css
@@ -10,7 +10,7 @@
 */
 @font-face {
   font-family: "remixicon";
-  src: url("https://arweave.net/-_1A94HwUUTJihQlVmWPls8BpKH1WxAwMwguVRvXHvo?t=1568552893872") format("woff2");
+  src: url("https://xf7ryflghqpy.arweave.net/Nszto_vH0RQa1DvKGSaztDnbjsygZEjxp3AOLQPLJUc") format("woff2");
   font-display: swap;
 }
 
