--- a/public/css/threads.css
+++ b/public/css/threads.css
@@ -106,7 +106,6 @@ POST
   width: 85%;
 }
 
-
  
 /** POST TIME. ALWAYS TOP RIGHT */
 .thread-post-time {
@@ -121,6 +120,11 @@ POST
   margin-right: 0.4em;
   font-size: 0.8em;
   /* padding: 0.4em; */
+}
+
+.thread-post-time svg {
+  fill: #aaa;
+  transform: scale(0.5);
 }
 
 /** FROM USERNAME / TEXT */
@@ -163,7 +167,6 @@ POST
 
 .thread-post-content {
   white-space: pre-wrap;
-  
 }
 
 .thread-post-content-textarea {
@@ -182,7 +185,8 @@ POST
   align-self: center;
   font-size: 1.3em;
   margin: 0.1em;
-  color: #999;
+  fill: #888;
+  transform: scale(0.8);
   cursor: pointer;
 }
 
@@ -192,8 +196,9 @@ POST
   align-self: center;
   font-size: 1.3em;
   margin: 0.1em;
-  animation:spin 8s linear infinite;
-  color: #eca388e0;
+  animation: pending-icon-spin 8s linear infinite;
+  fill: #eca388e0;
+  transform: scale(0.47);
   opacity: 0.0;
   z-index: 50;
 }
@@ -201,8 +206,10 @@ POST
   opacity: 1.0;
 }
 
-@keyframes spin { 
-  100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
+@keyframes pending-icon-spin { 
+  0% { transform: scale(0.8) rotate(0deg) }
+  50% { transform: scale(0.8) rotate(180deg) }
+  100% { transform: scale(0.8) rotate(360deg) } 
 }
 
 .thread-post-time-with-edits {
@@ -261,7 +268,11 @@ POST
   color: rgb(170, 170, 170);
   margin: 0.19em 0em;
   padding: 0.1em .3em;
-  
+}
+
+.thread-post-reply-button svg {
+  fill: rgb(170, 170, 170);
+  transform: scale(0.68);
 }
 
 .edit-post-button-bar {
@@ -285,7 +296,6 @@ POST
   padding: 0.38em;
   min-width: 0;
   border-radius: 0.4em;
-  color: rgb(170, 170, 170);
   margin: 0.45em 0em;
   padding: 0em 0.3em;
   color: rgba(46, 46, 46, 0.82);
@@ -295,9 +305,10 @@ POST
   margin-left: 0.5em;
 }
 
-.thread-post-save-edit i,
-.thread-post-cancel-edit i {
+.thread-post-save-edit svg,
+.thread-post-cancel-edit svg {
   margin-left: 0.3em;
+  fill: rgba(46, 46, 46, 0.82);
    
 }
 .thread-post-save-edit:hover,
@@ -333,6 +344,10 @@ POST
 .thread-post-reply-button:hover {
   color: rgb(100, 100, 100);
   border: 1px solid rgb(185, 192, 226);
+  
+}
+.thread-post-reply-button:hover svg {
+  fill: rgb(100, 100, 100);
 }
 
 /** REPLY BUTTON OVERRIDES FOR ROOT */
@@ -341,6 +356,10 @@ POST
    padding: 0.4em 1em;
    justify-content: space-between;
    font-size: 1em;
+}
+
+.thread-post-is-root .thread-post-reply-button svg {
+  fill: rgba(46, 46, 46, 0.82);
 }
 
 .thread-post-is-root .thread-post-reply-button:hover {
@@ -356,54 +375,36 @@ POST
   grid-column: 8 / 9;
   margin: 0.05em 1em;
   padding: 0.17em;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
   color: rgb(170, 170, 170);
+  fill: rgb(170, 170, 170);
 }
 
-.thread-post-vote .ri-thumb-up-line,
-.thread-post-vote .ri-thumb-down-line {
-  margin-left: 0.13em;
-  border: 1px solid rgba(0, 0, 0, 0.001);
-  border-radius: 0.4em;
-  transition: transform 0.2s, border 0.5s;
-  padding: 0.2em;
-}
 
-.thread-post-vote .ri-thumb-up-line {
-  font-size: 1.35em;
-}
-
-.thread-post-vote .ri-thumb-down-line {
-  font-size: 1.15em;
-}
-
-.thread-post-vote .ri-thumb-up-line:hover {
-  color: rgb(100, 100, 100);
-  border: 1px solid rgb(128, 210, 120);
-  transform: scale3d(1.12, 1.12, 1.12);
-}
-
-.is-votes-disabled.thread-post-vote .ri-thumb-up-line:hover {
-  color: unset;
-  border: 1px solid rgba(128, 210, 120,0);
-  transform: scale3d(1, 1, 1);
-}
-
-.thread-post-vote .ri-thumb-down-line:hover {
-  color: rgb(100, 100, 100);
-  border: 1px solid rgb(210, 162, 120);
-}
-
-.is-votes-disabled.thread-post-vote  .ri-thumb-down-line:hover {
-  color: unset;
+.vote-up-svg, .vote-down-svg {
   border: 1px solid rgba(0,0,0,0);
+  border-radius: 0.6em;
+  padding: 0.12em;
+  transition: all .25s;
 }
 
-.button-icon {
-  cursor: pointer;
-  transition: opacity 2.5s;
-  opacity: 1.0;
+.vote-up-svg {
+  transform: scale(0.85);
+}
+
+.vote-down-svg  {
+  transform: scale(0.65);
+}
+
+.vote-up-svg:hover {
+  fill: rgb(100, 100, 100);
+  border: 1px solid rgb(128, 210, 120);
+  transform: scale(0.95);
+}
+.vote-down-svg:hover {
+  fill: rgb(100, 100, 100);
+  border: 1px solid rgb(210, 162, 120);
 }
 
 
@@ -457,9 +458,10 @@ POST
   box-shadow: 0 0px 5px 0px rgba(0, 0, 0, 0.24);
   background: rgba(228, 230, 242, 0.87);
 }
-.post-reply a i {
+.post-reply a svg {
   margin-left: 0.4em;
-  font-size: 1.25em;
+  transform: scale(0.78);
+  fill: #4d4d4d;
 }
 
 /** BAD CONTENT DIV - REPLACES ENTIRE POST **/
