--- a/public/css/general.css
+++ b/public/css/general.css
@@ -152,10 +152,13 @@
   transition: background 0.19s;
 }
 
-
+.user-login-panel  label {
+  cursor: pointer;
+}
 
 .user-login-panel > * {
   margin-left: 0.2em;
+
 }
 /*
 .user-login-panel.not-logged-in {
